feat: Install Node.js and update Dockerfile for frontend support

--- a/docker/laravel/Dockerfile
+++ b/docker/laravel/Dockerfile
@@ -9,14 +9,22 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
     libfreetype6-dev \
+    curl \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo pdo_mysql
+
+# Install Node.js and npm (version 18)
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
+    apt-get install -y nodejs
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Copy application files
 COPY . .
+
+# Install PHP dependencies
+RUN composer install
 
 # Set permissions
 RUN chown -R www-data:www-data /var/www/html \
